configuration/monitoring-logs-elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-logging
  namespace: knative-monitoring
  labels:
    app: elasticsearch-logging
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "Elasticsearch"
spec:
  ports:
    - port: 9200
      protocol: TCP
      targetPort: db
  selector:
    app: elasticsearch-logging
---
# Elasticsearch deployment itself
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-logging
  namespace: knative-monitoring
  labels:
    app: elasticsearch-logging
    version: v5.6.4
    kubernetes.io/cluster-service: "true"
spec:
  serviceName: elasticsearch-logging
  replicas: 2
  selector:
    matchLabels:
      app: elasticsearch-logging
      version: v5.6.4
  volumeClaimTemplates:
    - metadata:
        name: elasticsearch-logging
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "${K8S_STORAGECLASS}"
        resources:
          requests:
            storage: ${ES_VOLUME_SIZE}
  template:
    metadata:
      labels:
        app: elasticsearch-logging
        version: v5.6.4
        kubernetes.io/cluster-service: "true"
    spec:
      serviceAccountName: elasticsearch-logging
      containers:
        - image: k8s.gcr.io/elasticsearch:v5.6.4
          name: elasticsearch-logging
          resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 100m
          ports:
            - containerPort: 9200
              name: db
              protocol: TCP
            - containerPort: 9300
              name: transport
              protocol: TCP
          volumeMounts:
            - name: elasticsearch-logging
              mountPath: /data
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-logging
  namespace: knative-monitoring
  labels:
    app: kibana-logging
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "Kibana"
spec:
  selector:
    app: kibana-logging
  ports:
    - port: 5601
      protocol: TCP
      targetPort: ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-logging
  namespace: knative-monitoring
  labels:
    app: kibana-logging
    kubernetes.io/cluster-service: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana-logging
  template:
    metadata:
      labels:
        app: kibana-logging
    spec:
      containers:
        - name: kibana-logging
          image: docker.elastic.co/kibana/kibana:5.6.4
          resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 100m
          ports:
            - containerPort: 5601
              name: ui
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  # Name of this service is referred at multiple places.
  # Any changes to this name should ensure to fix it in
  # all places where this name is referred.
  name: fluentd-ds
  namespace: knative-monitoring
  labels:
    app: fluentd-ds
    serving.knative.dev/release: "v0.15.0"
spec:
  selector:
    app: fluentd-ds
  ports:
    - name: fluentd-tcp
      port: 24224
      protocol: TCP
      targetPort: 24224
    - name: fluentd-udp
      port: 24224
      protocol: UDP
      targetPort: 24224
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd-ds
  namespace: knative-monitoring
  labels:
    app: fluentd-ds
    version: v2.0.4
    serving.knative.dev/release: "v0.15.0"
spec:
  selector:
    matchLabels:
      app: fluentd-ds
      version: v2.0.4
  template:
    metadata:
      labels:
        app: fluentd-ds
        version: v2.0.4
        serving.knative.dev/release: "v0.15.0"
      # This annotation ensures that fluentd does not get evicted if the node
      # supports critical pod annotation based priority scheme.
      # Note that this does not guarantee admission on the nodes (#40573).
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
    spec:
      serviceAccountName: fluentd-ds
      containers:
        - name: fluentd-ds
          image: k8s.gcr.io/fluentd-elasticsearch:v2.0.4
          securityContext:
            privileged: true
          resources:
            limits:
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - name: varlogcontainers
              mountPath: /var/log/containers
              readOnly: true
            - name: varlogpods
              mountPath: /var/log/pods
              readOnly: true
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: varlibkubeletpods
              mountPath: /var/lib/kubelet/pods
              readOnly: true
            - name: libsystemddir
              mountPath: /host/lib
              readOnly: true
            - name: config-volume
              mountPath: /etc/fluent/config.d
      nodeSelector:
        beta.kubernetes.io/fluentd-ds-ready: "true"
      terminationGracePeriodSeconds: 30
      volumes:
        - name: varlogcontainers
          hostPath:
            path: /var/log/containers
        - # It is needed because files under /var/log/containers link to /var/log/pods
          name: varlogpods
          hostPath:
            path: /var/log/pods
        - # It is needed because files under /var/log/pods link to /var/lib/docker/containers
          name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - # It is needed because user-container's /var/log is located in /var/lib/kubelet/pods/*/volumes/
          name: varlibkubeletpods
          hostPath:
            path: /var/lib/kubelet/pods
        - # It is needed to copy systemd library to decompress journals
          name: libsystemddir
          hostPath:
            path: /usr/lib64
        - name: config-volume
          configMap:
            name: fluentd-ds-config

---
