configuration/mw-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: knative-ingress-gateway
  namespace: knative-serving
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.${DP_EP}"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: knative-secure-ingress-gateway
  namespace: knative-serving
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: ${INGRESS_PORT}
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: mw-credential
      hosts:
        - "*.${DP_EP}"
